# devinit

./: LICENSE  README.md  pyproject.toml
devinit/: exceptions.py  main.py
devinit/cli/: __init__.py  option_defs.py
devinit/cli/config/: __init__.py
devinit/cli/create/: __init__.py  app.py  python.py  update.py
devinit/cli/create/python/: app.py
devinit/config/: config.py  defaults.toml  loaders.py  prefs.py  resolver.py
devinit/generators/: BaseGenerator.py  generator.py  manifest.py  pack_resolver.py  post_processor.py  python.py  template.py
devinit/models/: option_classes.py
devinit/services/: PostGenerator.py  __init__.py  dependencies.py  git.py  github.py
devinit/templates/license/: MIT.j2
devinit/templates/python/fastapi/: manifest.toml
devinit/templates/python/fastapi-web/: config.toml  manifest.toml
devinit/templates/python/fastapi-web/api/: README.md.j2  main.py.j2
devinit/templates/python/fastapi-web/api-router/: README.md.j2  main.py.j2  pyproject.toml.j2
devinit/templates/python/fastapi-web/docker/: Dockerfile.j2
devinit/templates/python/fastapi-web/git/: .gitignore.j2
devinit/templates/python/fastapi-web/migrations/: alembic.ini.j2
devinit/templates/python/fastapi-web/web/: README.md.j2  main.py.j2
devinit/templates/python/fastapi-web/web-router/: README.md.j2  main.py.j2  pyproject.toml.j2
devinit/templates/python/flask/basic/: {{{ entry }}}.py.j2
devinit/templates/python/flask/common/: README.md.j2  pyproject.toml.j2
devinit/templates/python/flask/docker/: .dockerignore  (+1 more)
devinit/templates/shipped/license/: MIT.j2
(+24 files in other folders)
